# authfix-examples

./: .gitmodules  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
session_config/: Cargo.toml  README.md
session_config/src/: main.rs
session_with_mfa/: Cargo.toml  README.md
session_with_mfa/src/: main.rs  register_secret.rs
session_with_redirect/: Cargo.toml  README.md
session_with_redirect/src/: main.rs
simple_session/: Cargo.toml  README.md
simple_session/src/: main.rs
