[workspace]
resolver = "3"
members = ["simple_session"]

# [package]
# name = "authfix-examples"
# version = "0.1.0"
# edition = "2021"

[workspace.dependencies]
authfix = { path = "authfix", features = ["google_auth"]}
actix-web="4.10.2"
serde = { version = "1.0.215", features = ["derive"]}
# actix-session = { version = "0.10.1", features = ["cookie-session"]}
