[workspace]
resolver = "3"
members = [ "session_config","simple_session"]

# [package]
# name = "authfix-examples"
# version = "0.1.0"
# edition = "2021"

[workspace.dependencies]
authfix = { path = "authfix", features = ["authenticator"]}
actix-web="4.10"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"]}
